# leviticus

./: .gitguardian.yml  .gitignore  .sonarcloud.properties  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties
.claude/: launch.json
.claude/mockups/: index.html  song-type.html
.claude/mockups/splash/: index.html
.github/workflows/: ci.yml  issue-status.yml  release-bump.yml  release-close-issues.yml  release.yml
apps/desktop/: .env.devlocal  .release-it.json  CHANGELOG.md  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/e2e/: .gitignore  package.json  tsconfig.json  wdio.conf.ts  wdio.local.conf.ts
apps/desktop/scripts/: fetch-binaries.mjs
apps/desktop/src/: App.tsx  env.ts  index.css  main.tsx  router.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  ext-bin-mac.json  ext-bin-win.json  yt-dlp-mac.json  yt-dlp-win.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_local_schema.sql  002_groups_color_index.sql  003_song_type.sql  004_playlist_horario_e_secao.sql  005_org_settings_columns.sql  006_cloud_storage.sql  007_analytics_queue.sql  008_playback_sessions.sql
apps/desktop/src-tauri/src/: cloud_storage.rs  ffmpeg.rs  lib.rs  main.rs  yt_dlp.rs
apps/landing/: .env.local.example  index.html  middleware.ts  package.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/landing/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/landing/components/: Closer.tsx  Comparison.tsx  Donation.tsx  Download.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  Logo.tsx  Nav.tsx  Responsibility.tsx  Showcase.tsx  Stats.tsx  TopBanner.tsx  WaitlistModal.tsx
apps/landing/lib/: adminAuth.ts  adminData.ts  adminEvents.test.ts  adminEvents.ts  adminLanding.test.ts  adminLanding.ts  adminPeriod.test.ts  adminPeriod.ts  adminProduto.test.ts  adminProduto.ts  adminSaude.test.ts  adminSaude.ts  config.ts  pix.ts  release.ts  supabaseAdmin.ts
docs/: PRD-Dashboard-Admin.md  PRD-Metricas-Comportamentais.md  projecao-crescimento-custo.md  self-hosted-runners.md
docs/superpowers/plans/: 2026-05-06-plan-1-foundation.md  2026-05-06-plan-2-desktop.md  2026-05-06-ui-polish.md  2026-05-06-youtube-search.md  2026-05-07-library-ux.md  2026-05-07-song-type.md  2026-05-13-organization-tab.md  2026-05-14-e2e-harness-and-first-journey.md  2026-05-14-e2e-journey-2-org-invites.md  2026-05-14-e2e-journey-3-add-song.md  2026-05-14-e2e-journey-4-play-song.md  2026-05-15-cloud-storage-foundation.md  2026-05-15-cloud-storage-ui-integracoes.md  2026-05-16-cloud-storage-add-song-flows.md  2026-05-16-cloud-storage-library-sync.md  2026-05-21-cloud-storage-banner-and-upload-dedup.md  2026-05-22-event-tracking-app.md  2026-05-22-permission-gating.md  (+2 more)
supabase/: config.toml
supabase/migrations/: 20260506000001_schema.sql  20260506000002_rls_helpers.sql  20260506000003_rls_policies.sql  20260506000004_triggers.sql  20260506000005_groups_color_index.sql  20260506000006_fix_song_groups_rls.sql  20260507000001_song_type.sql  20260507000002_remove_orphan_song_trigger.sql  20260507000003_fix_song_groups_policy.sql  20260507000004_update_song_groups_rpc.sql  20260507000005_fix_update_song_groups_no_auth_check.sql  20260507000006_update_song_rpc.sql  20260507000007_update_song_rpc_defaults.sql  20260507000008_reorder_playlist_songs_rpc.sql  20260508000001_fix_songs_delete_owner.sql  20260508000002_debug_auth_rpc.sql  20260508000003_delete_song_rpc.sql  20260508000004_delete_song_rpc_v2.sql  20260508100001_playlist_horario_e_secao.sql  20260508100002_playlist_rpcs.sql  20260511000001_app_releases_bucket.sql  20260513000001_waitlist.sql  20260513000002_org_settings_columns.sql  20260513000003_seed_owner_role.sql  20260513000004_org_rpcs.sql  20260513000005_org_rpcs_security_hardening.sql  20260513000006_user_profiles_view.sql  20260514000001_invite_code_public_lookup.sql  20260514000002_redeem_invite_code_rpc.sql  20260515000001_cloud_storage.sql  20260515000002_seed_manage_integrations_to_owner.sql  20260516000001_set_cloud_storage_account_rpc.sql  20260517000001_user_profiles_security_definer.sql  20260518000001_cloud_storage_edge_crypto.sql  20260518000002_platform_stats_rpc.sql  20260519000001_ensure_owner_role_rpc.sql  20260522000001_analytics_events.sql  20260522000002_server_now_rpc.sql  20260522000003_rpc_permission_checks.sql  20260523000001_analytics_culto_started.sql  (+5 more)
supabase/snippets/: Untitled query 985.sql
worker/: .env.example  package.json  tsconfig.json  vitest.config.ts
worker/src/: app.ts  index.ts
(+369 files in other folders)
