[package]
name = "leviticus-desktop"
version = "0.7.3"
description = "Leviticus — church music player"
authors = ["you"]
edition = "2021"

[lib]
name = "leviticus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# E2E only: plugin compilado e ativado apenas em builds debug (via
# cfg(debug_assertions) em lib.rs). Permite que o `tauri-wd` CLI controle
# o app via WebDriver no macOS. Em release builds, o código é compilado
# mas nunca instanciado (dead code elimination cuida).
tauri-plugin-webdriver-automation = "0.1"
# Pra baixar yt-dlp/ffmpeg em $APPLOCALDATA/bin no primeiro uso. rustls
# evita linkar OpenSSL (mais leve e cross-platform). stream pra futuro
# progresso. flate2 descomprime os .gz do ffmpeg-static. sha2 verifica
# integridade dos binários baixados (defesa supply-chain).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
futures-util = "0.3"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
